NXP-32696: Build and run Nuxeo with Java 21