@@ -201,7 +201,7 @@ public class RenderingContextImpl implements RenderingContext {
         List<Object> values = parameters.get(realName);
         if (CollectionUtils.isNotEmpty(values)) {
             @SuppressWarnings("unchecked")
-            T value = (T) values.get(0);
+            T value = (T) values.getFirst();
             return value;
         }
         if (WRAPPED_CONTEXT.equalsIgnoreCase(realName)) {
@@ -214,18 +214,11 @@ public class RenderingContextImpl implements RenderingContext {
     @Override
     public boolean getBooleanParameter(String name) {
         Object result = getParameter(name);
-        if (result == null) {
-            return false;
-        } else if (result instanceof Boolean) {
-            return (Boolean) result;
-        } else if (result instanceof String) {
-            try {
-                return Boolean.parseBoolean((String) result);
-            } catch (Exception e) {
-                return false;
-            }
-        }
-        return false;
+        return switch (result) {
+            case Boolean bool -> bool;
+            case String string -> Boolean.parseBoolean(string);
+            case null, default -> false;
+        };
     }
 
     @SuppressWarnings({ "rawtypes", "unchecked" })
