@@ -185,7 +185,7 @@ public class ExifToolProcessor implements BinaryMetadataProcessor {
         List<Map<String, Object>> resultList = jacksonMapper.readValue(jsonOutput,
                 new TypeReference<List<Map<String, Object>>>() {
                 });
-        Map<String, Object> resultMap = resultList.get(0);
+        Map<String, Object> resultMap = resultList.getFirst();
         // Remove the SourceFile metadata injected automatically by ExifTool.
         resultMap.remove(META_NON_USED_SOURCE_FILE);
         parseDates(resultMap);
@@ -217,20 +217,16 @@ public class ExifToolProcessor implements BinaryMetadataProcessor {
         return metadataList.stream().map(tag -> "-" + tag).collect(Collectors.toList());
     }
 
-    @SuppressWarnings("unchecked")
     protected List<String> getCommandTags(Map<String, Object> metadataMap) {
         List<String> commandTags = new ArrayList<>();
         for (Map.Entry<String, Object> metadata : metadataMap.entrySet()) {
             String tag = metadata.getKey();
             Object metadataValue = metadata.getValue();
-            if (metadataValue instanceof Collection) {
-                commandTags.addAll(buildCommandTagsFromCollection(tag, (Collection<Object>) metadataValue));
-            } else if (metadataValue instanceof Object[]) {
-                commandTags.addAll(buildCommandTagsFromCollection(tag, List.of((Object[]) metadataValue)));
-            } else if (metadataValue instanceof Calendar) {
-                commandTags.add(buildCommandTagFromDate(tag, ((Calendar) metadataValue).getTime()));
-            } else {
-                commandTags.add(buildCommandTag(tag, metadataValue));
+            switch (metadataValue) {
+                case Collection<?> collection -> commandTags.addAll(buildCommandTagsFromCollection(tag, collection));
+                case Object[] objects -> commandTags.addAll(buildCommandTagsFromCollection(tag, List.of(objects)));
+                case Calendar calendar -> commandTags.add(buildCommandTagFromDate(tag, calendar.getTime()));
+                case null, default -> commandTags.add(buildCommandTag(tag, metadataValue));
             }
         }
         return commandTags;
@@ -246,7 +242,7 @@ public class ExifToolProcessor implements BinaryMetadataProcessor {
     /**
      * @since 8.3
      */
-    private List<String> buildCommandTagsFromCollection(String tag, Collection<Object> values) {
+    private List<String> buildCommandTagsFromCollection(String tag, Collection<?> values) {
         return values.isEmpty() ? Collections.singletonList("-" + tag + "=")
                 : values.stream().map(val -> buildCommandTag(tag, val)).collect(Collectors.toList());
     }
